# MCP-Server-Financial-Analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
src/financial_analyzer/: app.py  server.py
src/financial_analyzer/data/: edgar_client.py  yahoo_finance.py
src/financial_analyzer/resources/: market_overview.py
src/financial_analyzer/tools/: analysis.py  fundamentals.py  sec_filings.py  stock_prices.py
